--- a/404.html
+++ b/404.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>404 Page not found - Nombre Apellido - MID 2021</title>
+  <title>404 Page not found - ArturoSchofield - MID 2021</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
-  <link rel="icon" href="http://arturoschofield_cye.github.io/favicon.png">
+  <link rel="icon" href="http://arturoschofield_ce.github.io/favicon.png">
 
   
   
@@ -41,10 +41,10 @@
     <div class='header'>
   <div class="container">
     <div class="logo">
-      <a href="http://arturoschofield_cye.github.io"><img alt="Logo" src="/images/logo-uai.png" /></a>
+      <a href="http://arturoschofield_ce.github.io"><img alt="Logo" src="/images/logo-uai.png" /></a>
     </div>
     <div class="logo-mobile">
-      <a href="http://arturoschofield_cye.github.io"><img alt="Logo" src="/images/logo-uai.png" /></a>
+      <a href="http://arturoschofield_ce.github.io"><img alt="Logo" src="/images/logo-uai.png" /></a>
     </div>
     <div id="main-menu" class="main-menu">
   <ul>
